# rustboot

./: Cargo.toml  README.md  build.rs  link.lds  mambo.sh  notes  q.sh
.cargo/: config
src/: console.rs  crt0.S  dt.rs  lpc.rs  main.rs  my_alloc.rs
