[package]
name = "rustboot"
version = "0.1.0"
authors = ["Oliver O'Halloran <oohall@gmail.com>"]
build = "build.rs"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
fdt = { path = "../fdt-0.0.1" }

[dependencies]
byteorder = { version = "1", default-features = false }
memchr = { version = "2", default-features = false }
fdt = "0.0.1"
